--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,7 @@ python-dotenv==1.0.0
 pyyaml==6.0.1
 termcolor==2.4.0
 playsound==1.3.0
+google-api-python-client 
+oauth2client
+openai==0.28
+g4f==0.2.0.7
